@@ -346,3 +346,93 @@ _wrap_gtk_source_buffer_get_marks_at_line(PyGObject *self,
 
     return py_ret; 	 
 } 	 
+
+%%
+override gtk_source_iter_backward_search kwargs
+static PyObject *
+_wrap_gtk_source_iter_backward_search(PyObject *self, PyObject *args,
+                                      PyObject *kwargs)
+{
+    static char *kwlist[] = { "iter", "str", "flags", "limit", NULL };
+    gchar *str;
+    PyObject *py_flags, *py_iter, *py_limit = Py_None;
+    GtkTextIter match_start, match_end, *iter = NULL, *limit = NULL;
+    GtkSourceSearchFlags flags;
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                    "OsO|O:gtksourceview2.iter_backward_search",
+                                    kwlist, &py_iter, &str, &py_flags,
+                                    &py_limit))
+        return NULL;
+
+    if (pyg_boxed_check(py_iter, GTK_TYPE_TEXT_ITER))
+        iter = pyg_boxed_get(py_iter, GtkTextIter);
+
+    if (pyg_boxed_check(py_limit, GTK_TYPE_TEXT_ITER))
+        limit = pyg_boxed_get(py_limit, GtkTextIter);
+
+    else if (py_limit != Py_None) {
+        PyErr_SetString(PyExc_TypeError,"limit must be a GtkTextIter or None");
+        return NULL;
+    }
+
+    if (pyg_flags_get_value(GTK_TYPE_TEXT_SEARCH_FLAGS, py_flags,
+                            (gint *)&flags))
+        return NULL;
+
+    if (gtk_source_iter_backward_search(iter, str, flags, &match_start,
+                                        &match_end, limit))
+        return Py_BuildValue("(NN)",
+                             pyg_boxed_new(GTK_TYPE_TEXT_ITER, &match_start,
+                                           TRUE, TRUE),
+                             pyg_boxed_new(GTK_TYPE_TEXT_ITER, &match_end,
+                                           TRUE, TRUE));
+
+    Py_INCREF(Py_None);
+    return Py_None;
+}
+
+%%
+override gtk_source_iter_forward_search kwargs
+static PyObject *
+_wrap_gtk_source_iter_forward_search(PyObject *self, PyObject *args,
+                                      PyObject *kwargs)
+{
+    static char *kwlist[] = { "iter", "str", "flags", "limit", NULL };
+    gchar *str;
+    PyObject *py_flags, *py_iter, *py_limit = Py_None;
+    GtkTextIter match_start, match_end, *iter = NULL, *limit = NULL;
+    GtkSourceSearchFlags flags;
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                    "OsO|O:gtksourceview2.iter_forward_search",
+                                    kwlist, &py_iter, &str, &py_flags,
+                                    &py_limit))
+        return NULL;
+
+    if (pyg_boxed_check(py_iter, GTK_TYPE_TEXT_ITER))
+        iter = pyg_boxed_get(py_iter, GtkTextIter);
+
+    if (pyg_boxed_check(py_limit, GTK_TYPE_TEXT_ITER))
+        limit = pyg_boxed_get(py_limit, GtkTextIter);
+
+    else if (py_limit != Py_None) {
+        PyErr_SetString(PyExc_TypeError,"limit must be a GtkTextIter or None");
+        return NULL;
+    }
+
+    if (pyg_flags_get_value(GTK_TYPE_TEXT_SEARCH_FLAGS, py_flags,
+                            (gint *)&flags))
+        return NULL;
+
+    if (gtk_source_iter_forward_search(iter, str, flags, &match_start,
+                                        &match_end, limit))
+        return Py_BuildValue("(NN)",
+                             pyg_boxed_new(GTK_TYPE_TEXT_ITER, &match_start,
+                                           TRUE, TRUE),
+                             pyg_boxed_new(GTK_TYPE_TEXT_ITER, &match_end,
+                                           TRUE, TRUE));
+
+    Py_INCREF(Py_None);
+    return Py_None;
+}
